setting page height overflow bug fixed

--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -14,7 +14,7 @@
   }
 
   main {
-    height: calc(100vh - 80px);
+    // height: calc(100vh - 80px);
     width: 100vw;
   }
 
